server - exposed stock removal API; updated acceptance test; updated swagger.yaml; bumped API version to 0.3.0 FreeCodeCamp - Dynamic Web Application Projects - Chart the Stock Market
